# mcp-timesheet

./: agent.py  pyproject.toml  run.sh  test_dev.sh
src/timesheet_mcp/: config.py  models.py  redmine.py  server.py  test.py  timesheet.py
src/timesheet_mcp/tools/: timesheet.py
